--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,11 @@
 			
 			<a class="navbar-brand" href="{% url 'home' %}">Cycletrails</a>
 
+			{% if user.is_authenticated %}
+				<ul class="navbar-nav mr-auto">
+				<li class="nav-item"><a href="{% url 'trail_new' %}">+ Trail</a></li> </ul>
+			{% endif %}
+
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
@@ -34,17 +39,6 @@
 								<div class="dropdown-divider"></div>
 								<a class="dropdown-item" href="{% url 'logout' %}">Log out</a>
 							</div>
-
-							{% comment %} <div class="dropdown">
-									<button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-									  Dropdown button
-									</button>
-									<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-									  <a class="dropdown-item" href="#">Action</a>
-									  <a class="dropdown-item" href="#">Another action</a>
-									  <a class="dropdown-item" href="#">Something else here</a>
-									</div>
-							</div> {% endcomment %}
 
 						</li>
 					</ul>
