frontend modifications, modified buttons, added trail_list links on title, added comments

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,24 +2,38 @@
 
 <!doctype html>
 
+{% load static %}
+
 <html lang="en">
 	
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-		<title>{% block title %}Cycletrails{% endblock title %}</title>
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+		<link rel="stylesheet" href="{% static 'css/base.css' %}">
+		<title>{% block title %}{% endblock title %} - Cycletrails</title>
 	</head>
 
 	<body>
 
 		<nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
 			
-			<a class="navbar-brand" href="{% url 'home' %}">Cycletrails</a>
+			<a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'img/clo-icon-small.png' %}" height="35px"/></a>
+
+			<form class="form-inline ml-auto">
+				<a href="{% url 'trail_list' %}" class="btn btn-primary ml-2">Trails</a> &nbsp; &nbsp;
+				<a href="{% url 'trail_new' %}" class="btn btn-outline-secondary"><i class="fas fa-plus"></i></a>
+			</form>
 
 			{% if user.is_authenticated %}
-				<ul class="navbar-nav mr-auto">
-				<li class="nav-item"><a href="{% url 'trail_new' %}">+ Trail</a></li> </ul>
+				{% comment %} <ul class="navbar-nav mr-auto">
+					<li class="nav-item"><a href="{% url 'trail_new' %}">+ Trail</a></li>
+				</ul> {% endcomment %}
+
+				{% comment %} <button type="button" class="btn btn-default btn-sm">
+					<a href="{% url 'trail_new' %}" style="text-decoration:none;"><i class="fas fa-plus"></i> Trail</a>
+				</button> {% endcomment %}
 			{% endif %}
 
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -27,6 +41,44 @@
 			</button>
 			
 			<div class="collapse navbar-collapse" id="navbarCollapse">
+
+				{% comment %} {% if user.is_authenticated %}
+					
+					<ul class="navbar-nav ml-auto">
+						<li class="nav-item">
+
+							<a class="nav-link dropdown-toggle" href="#" id="userMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{ user.username }}</a>
+							
+							<div class="dropdown-menu dropdown-menu-right" aria-labelledby="userMenu">
+								<a class="dropdown-item" href="{% url 'password_change' %}">Change password</a>
+								<div class="dropdown-divider"></div>
+								<a class="dropdown-item" href="{% url 'logout' %}">Log out</a>
+							</div>
+
+						</li>
+					</ul>
+
+				{% else %}
+					
+					<form class="form-inline ml-auto">
+						<a href="{% url 'login' %}" class="btn btn-outline-secondary">Log in</a>
+						<a href="{% url 'signup' %}" class="btn btn-primary ml-2">Sign up</a>
+					</form>
+						
+				{% endif %} {% endcomment %}
+
+				{% comment %} <form class="form-inline ml-auto">
+					<a href="{% url 'trail_new' %}" class="btn btn-outline-primary" style="text-decoration:none;"><i class="fas fa-plus"></i> Trail</a>
+					<a href="{% url 'trail_list' %}" class="btn btn-outline-secondary">Trails</a>
+				</form> {% endcomment %}
+
+				{% comment %} <form class="form-inline ml-auto">
+					<a href="{% url 'trail_new' %}" class="btn btn-outline-secondary"><i class="fas fa-plus"></i></a>
+					<a href="{% url 'trail_list' %}" class="btn btn-primary ml-2">Trails</a>
+				</form> {% endcomment %}
+
+				{% comment %} <li class="divider-vertical"></li> {% endcomment %}
+
 				{% if user.is_authenticated %}
 					
 					<ul class="navbar-nav ml-auto">
@@ -62,9 +114,9 @@
 
 		</div>
     
-		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
 	</body>
 
 </html>
