--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -16,4 +16,9 @@
 
 	</form>
 
+	<br /><br />
+
+	<a href="{% url 'signup' %}">Sign up</a> |
+	<a href="{% url 'password_reset' %}">Reset password</a>
+
 {% endblock %}
