--- a/templates/trail_list.html
+++ b/templates/trail_list.html
@@ -8,7 +8,7 @@
 		<div class="card">
 
 			<div class="card-header">
-				<span class="font-weight-bold"><a href="">{{ trail.title }}</a></span> &middot;
+				<span class="font-weight-bold"><a href="{% url 'trail_detail' trail.pk %}">{{ trail.title }}</a></span> &middot;
 				<span class="text-muted">by {{ trail.author }} | {{ trail.date }}</span>
 			</div>
 
@@ -16,10 +16,10 @@
 				{{ trail.about }}
 			</div>
 
-			<div class="card-footer text-center text-muted">
+			{% comment %} <div class="card-footer text-center text-muted">
 				<a href="{% url 'trail_edit' trail.pk %}">Edit</a> | 
 				<a href="{% url 'trail_delete' trail.pk %}">Delete</a>
-			</div>
+			</div> {% endcomment %}
 
 		</div>
 
