--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 		<link rel="stylesheet" href="{% static 'css/base.css' %}">
 		<title>{% block title %}{% endblock title %} - Cycletrails</title>
 	</head>
@@ -19,14 +20,15 @@
 
 		<nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
 			
-			<a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'img/clo-icon-small.png' %}" height="35px"/></a>
+			<a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'img/clo-icon-small.png' %}" height="32px"/></a>
 
 			<form class="form-inline ml-auto">
-				<a href="{% url 'trail_list' %}" class="btn btn-primary ml-2">Trails</a> &nbsp; &nbsp;
-				<a href="{% url 'trail_new' %}" class="btn btn-outline-secondary"><i class="fas fa-plus"></i></a>
+				<a href="{% url 'trail_list' %}" class="btn btn-primary ml-2"><i class="fas fa-map-marker"></i> Trails</a> &nbsp; &nbsp;
+				<a href="{% url 'trail_new' %}" class="btn btn-outline-primary"><i class="fas fa-plus"></i></a>
+				{% comment %} <a href="{% url 'trail_new' %}"><i class="material-icons md-36">add_box</i></a> {% endcomment %}
 			</form>
 
-			{% if user.is_authenticated %}
+			{% comment %} {% if user.is_authenticated %} {% endcomment %}
 				{% comment %} <ul class="navbar-nav mr-auto">
 					<li class="nav-item"><a href="{% url 'trail_new' %}">+ Trail</a></li>
 				</ul> {% endcomment %}
@@ -34,7 +36,7 @@
 				{% comment %} <button type="button" class="btn btn-default btn-sm">
 					<a href="{% url 'trail_new' %}" style="text-decoration:none;"><i class="fas fa-plus"></i> Trail</a>
 				</button> {% endcomment %}
-			{% endif %}
+			{% comment %} {% endif %} {% endcomment %}
 
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
@@ -84,12 +86,12 @@
 					<ul class="navbar-nav ml-auto">
 						<li class="nav-item">
 
-							<a class="nav-link dropdown-toggle" href="#" id="userMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{ user.username }}</a>
+							<a class="nav-link dropdown-toggle" href="#" id="userMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="far fa-user"></i> {{ user.username }}</a>
 							
 							<div class="dropdown-menu dropdown-menu-right" aria-labelledby="userMenu">
-								<a class="dropdown-item" href="{% url 'password_change' %}">Change password</a>
+								<a class="dropdown-item" href="{% url 'password_change' %}"><i class="fas fa-unlock"></i> Change password</a>
 								<div class="dropdown-divider"></div>
-								<a class="dropdown-item" href="{% url 'logout' %}">Log out</a>
+								<a class="dropdown-item" href="{% url 'logout' %}"><i class="fas fa-times-circle"></i> Log out</a>
 							</div>
 
 						</li>
@@ -113,6 +115,56 @@
 			{% endblock %}
 
 		</div>
+
+		{% comment %} FOOTER {% endcomment %}
+
+	  <footer id="myFooter">
+			<div class="container">
+				<div class="row">
+					<div class="col-sm-3 myCols">
+						<h5>Get started</h5>
+						<ul>
+							<li><a href="#">Home</a></li>
+							<li><a href="#">Sign up</a></li>
+							<li><a href="#">Downloads</a></li>
+						</ul>
+					</div>
+					<div class="col-sm-3 myCols">
+						<h5>About us</h5>
+						<ul>
+							<li><a href="#">Company Information</a></li>
+							<li><a href="#">Contact us</a></li>
+							<li><a href="#">Reviews</a></li>
+						</ul>
+					</div>
+					<div class="col-sm-3 myCols">
+						<h5>Support</h5>
+						<ul>
+							<li><a href="#">FAQ</a></li>
+							<li><a href="#">Help desk</a></li>
+							<li><a href="#">Forums</a></li>
+						</ul>
+					</div>
+					<div class="col-sm-3 myCols">
+						<h5>Legal</h5>
+						<ul>
+							<li><a href="#">Terms of Service</a></li>
+							<li><a href="#">Terms of Use</a></li>
+							<li><a href="#">Privacy Policy</a></li>
+						</ul>
+					</div>
+				</div>
+			</div>
+			<div class="social-networks">
+				<a href="#" class="instagram"><i class="fa fa-instagram"></i></a>
+				<a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
+				<a href="#" class="youtube"><i class="fa fa-youtube"></i></a>
+			</div>
+			<div class="footer-copyright">
+				<p><div class="footer-copyright text-center py-3">© 2018 Cycletrails
+						<br /> <small>Made in Romania with <i class="fas fa-heart" style="color:red;"></i> for <i class="fas fa-bicycle"> & <i class="fas fa-leaf"></i></small></i></p>
+			</div>
+		</footer>
     
 		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
