--- a/templates/trail_edit.html
+++ b/templates/trail_edit.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 	<h1>Edit</h1>
-	<form action="" method="post">
+	<form action="" method="post" enctype="multipart/form-data">
 		{% csrf_token %}
 		{{ form.as_p }}
 		<button class="btn btn-info ml-2" type="submit">Update</button>
