--- a/templates/team.html
+++ b/templates/team.html
@@ -1,10 +1,10 @@
-<!-- templates/about_us.html -->
+<!-- templates/team.html -->
 
 {% extends 'base.html' %}
 
 {% load static %}
 
-{% block title %}About Us{% endblock %}
+{% block title %}Our team{% endblock %}
 
 {% block content %}
 
