--- a/templates/base.html
+++ b/templates/base.html
@@ -7,13 +7,41 @@
 <html lang="en">
 	
 	<head>
+		
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+		
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Maven+Pro" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
+
 		<link rel="stylesheet" href="{% static 'css/base.css' %}">
+		<link rel="stylesheet" href="{% static 'css/footer.css' %}">
+		<link rel="stylesheet" href="{% static 'css/home.css' %}">
+
+		<link rel="apple-touch-icon" sizes="57x57" href="static/img/icons/apple-icon-57x57.png">
+		<link rel="apple-touch-icon" sizes="60x60" href="static/img/icons/apple-icon-60x60.png">
+		<link rel="apple-touch-icon" sizes="72x72" href="static/img/icons/apple-icon-72x72.png">
+		<link rel="apple-touch-icon" sizes="76x76" href="static/img/icons/apple-icon-76x76.png">
+		<link rel="apple-touch-icon" sizes="114x114" href="static/img/icons/apple-icon-114x114.png">
+		<link rel="apple-touch-icon" sizes="120x120" href="static/img/icons/apple-icon-120x120.png">
+		<link rel="apple-touch-icon" sizes="144x144" href="static/img/icons/apple-icon-144x144.png">
+		<link rel="apple-touch-icon" sizes="152x152" href="static/img/icons/apple-icon-152x152.png">
+		<link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
+		<link rel="icon" type="image/png" sizes="192x192"  href="static/img/icons/android-icon-192x192.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="static/img/icons/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="96x96" href="static/img/icons/favicon-96x96.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="static/img/icons/favicon-16x16.png">
+		<link rel="manifest" href="static/img/icons/manifest.json">
+		<meta name="msapplication-TileColor" content="#ffffff">
+		<meta name="msapplication-TileImage" content="static/img/icons/ms-icon-144x144.png">
+		<meta name="theme-color" content="#ffffff">
+
 		<title>{% block title %}{% endblock title %} - Cycletrails</title>
+
 	</head>
 
 	<body>
@@ -89,9 +117,11 @@
 							<a class="nav-link dropdown-toggle" href="#" id="userMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="far fa-user"></i> {{ user.username }}</a>
 							
 							<div class="dropdown-menu dropdown-menu-right" aria-labelledby="userMenu">
-								<a class="dropdown-item" href="{% url 'password_change' %}"><i class="fas fa-unlock"></i> Change password</a>
+								<a class="dropdown-item" href="#"><i class="fas fa-map-marker"></i>&nbsp; View my trails</a>
 								<div class="dropdown-divider"></div>
-								<a class="dropdown-item" href="{% url 'logout' %}"><i class="fas fa-times-circle"></i> Log out</a>
+								<a class="dropdown-item" href="{% url 'password_change' %}"><i class="fas fa-unlock"></i>&nbsp; Change password</a>
+								<div class="dropdown-divider"></div>
+								<a class="dropdown-item" href="{% url 'logout' %}"><i class="fas fa-times-circle"></i>&nbsp; Log out</a>
 							</div>
 
 						</li>
