--- a/templates/trail_detail.html
+++ b/templates/trail_detail.html
@@ -8,12 +8,12 @@
 		<img src="{{ object.image.url }}" height="300px"/>
 		{% comment %} {{ trail.image }} {% endcomment %}
 		<h2>{{ object.title }}</h2>
-			<p><i class="far fa-user"></i> {{ object.author }} |  <i class="fas fa-calendar-alt"></i> {{ object.date }}</p>
+			<p><i class="far fa-user"></i> {{ object.author }} &nbsp;&nbsp; <i class="fas fa-calendar-alt"></i> {{ object.date }}</p>
 			<p>{{ object.about }}</p>
 	</div>
 
 	{% if user.is_authenticated %}
-		<p><a href="{% url 'trail_edit' trail.pk %}">Edit</a> | <a href="{% url 'trail_delete' trail.pk %}">Delete</a></p>
+		<p><a href="{% url 'trail_edit' trail.pk %}" class="btn btn-primary btn-xs"><i class="far fa-edit"></i> Edit</a> &nbsp;&nbsp; <a href="{% url 'trail_delete' trail.pk %}" class="btn btn-primary btn-xs"><i class="far fa-trash-alt"></i> Delete</a></p>
 	{% endif %}
 
 	{% comment %} <p>Back to <a href="{% url 'trail_list' %}">All Trails</a>.</p> {% endcomment %}
