almost fully integrated the new template, and fixed some issues, added grid like listing of the trails

--- a/templates/home.html
+++ b/templates/home.html
@@ -2,7 +2,7 @@
 
 {% extends 'base.html' %}
 
-{% block title %}Home{% endblock %}
+{% block title %}Amazing bike trails around Europe{% endblock %}
 
 {% block content %}
 
@@ -13,15 +13,15 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12 hidden-sm col-md-5">
-                <figure class="mobile-image wow fadeInUp" data-wow-delay="0.2s">
+                <figure class="mobile-image wow fadeInUp" data-wow-delay="0.1s">
                     <img src="{% static 'images/header-mobile-mountain.png' %}" alt="">
                 </figure>
             </div>
             <div class="col-xs-12 col-md-7">
                 <div class="space-80 hidden-xs"></div>
-                <h1 class="wow fadeInUp" data-wow-delay="0.4s">Discover amazing bike trails around Europe</h1>
+                <h1 class="wow fadeInUp" data-wow-delay="0.2s">Discover amazing bike trails around Europe</h1>
                 <div class="space-20"></div>
-                <div class="desc wow fadeInUp" data-wow-delay="0.6s">
+                <div class="desc wow fadeInUp" data-wow-delay="0.3s">
                     <p>Cycletrails has awesome bike trails from cool people all around Europe that share the same passion for nature & bicycles and wanna have some fun exploring in an ecological way.</p>
                 </div>
                 <div class="space-20"></div>
