--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,7 @@
     <title>{% block title %}{% endblock title %} - Cycletrails</title>
 
     <!-- Plugin-CSS -->
+    {% comment %} <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"> {% endcomment %}
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/owl.carousel.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/linearicons.css' %}">
@@ -65,7 +66,8 @@
         <span><i class="lnr lnr-bicycle"></i></span>
     </div> {% endcomment %}
     <!-- MainMenu-Area -->
-    <nav class="mainmenu-area" data-spy="affix" data-offset-top="200">
+    {% comment %} <nav class="mainmenu-area" data-spy="affix" data-offset-top="200"> {% endcomment %}
+    <nav class="mainmenu-area" data-spy="affix">
         <div class="container-fluid">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#primary_menu">
@@ -81,29 +83,28 @@
             </div>
             <div class="collapse navbar-collapse" id="primary_menu">
                 <ul class="nav navbar-nav mainmenu">
-                    <li><a href="{% url 'trail_list' %}"><!-- <span class="lnr lnr-map-marker" style="font-size:1em"></span> --> TRAILS</a></li>
-                    <li><a href="{% url 'trail_new' %}"><span class="lnr lnr-plus-circle"></span></i></a></li>
+                    {% comment %} <li><a href="{% url 'trail_list' %}"> TRAILS</a></li>
+                    <li><a href="{% url 'trail_new' %}"><span class="lnr lnr-plus-circle"></span></i></a></li> {% endcomment %}
                     {% comment %} <li><a href="#">Media</a></li> {% endcomment %}
                 </ul>
                 <div class="right-button hidden-xs">
 
-                    {% if user.is_authenticated %}
+                    <a href="{% url 'trail_list' %}">Trails</a>
+                    <a href="{% url 'trail_new' %}"><i class="fas fa-plus"></i></a>
 
-                        <ul class="navbar-nav ml-auto" style="list-style-type: none;">
-                            <li class="nav-item">
+                    &nbsp;&nbsp;&nbsp;&nbsp;
+
+                    {% if user.is_authenticated %}
     
-                                <a class="nav-link dropdown-toggle" href="#" id="userMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="far fa-user"></i> {{ user.username }}</a>
-                                
-                                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userMenu">
-                                    <a class="dropdown-item" href="#"><i class="fas fa-map-marker"></i>&nbsp; View my trails</a>
-                                    <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item" href="{% url 'password_change' %}"><i class="fas fa-unlock"></i>&nbsp; Change password</a>
-                                    <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item" href="{% url 'logout' %}"><i class="fas fa-times-circle"></i>&nbsp; Log out</a>
-                                </div>
-    
-                            </li>
-                        </ul>
+                        <a class="nav-link dropdown-toggle" href="#" id="userMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="far fa-user"></i> {{ user.username }}</a>
+                        
+                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userMenu">
+                            <a class="dropdown-item" href="#" style="color:#768ede;"><i class="fas fa-map-marker"></i>&nbsp; View my trails</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="{% url 'password_change' %}" style="color:#768ede;"><i class="fas fa-unlock"></i>&nbsp; Change password</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="{% url 'logout' %}" style="color:#768ede;"><i class="fas fa-times-circle"></i>&nbsp; Log out</a>
+                        </div>
 
                     {% else %}
 
@@ -177,13 +178,13 @@
                 <div class="col-xs-12 col-md-7">
                     <div class="footer-menu">
                         <ul>
-                            <li><a href="#">About</a></li>
-                            <li><a href="#">Support</a></li>
+                            <li><a href="{% url 'about' %}">About</a></li>
+                            {% comment %} <li><a href="{% url 'support' %}">Support</a></li> {% endcomment %}
                             {% comment %} <li><a href="#">Services</a></li>
                             <li><a href="#">Features</a></li>
                             <li><a href="#">Pricing</a></li>
                             <li><a href="#">Testimonial</a></li> {% endcomment %}
-                            <li><a href="#">Contact</a></li>
+                            <li><a href="{% url 'contact' %}">Contact</a></li>
                         </ul>
                         {% comment %} <div style="text-align: right;">
                             <a href="https://www.facebook.com/ciclotrasee" target="_blank"><i class="fab fa-facebook" style="font-size:1.7em;"></i></a>
