added new form design to all forms, other minor changes, hidden some code that is not fully functional yet

--- a/templates/home.html
+++ b/templates/home.html
@@ -25,7 +25,7 @@
                     <p>Cycletrails has awesome bike trails from cool people all around Europe that share the same passion for nature & bicycles and wanna have some fun exploring in an ecological way.</p>
                 </div>
                 <div class="space-20"></div>
-                <a href="{% url 'trail_list' %}" class="bttn-white wow fadeInUp" data-wow-delay="0.8s"><i class="lnr lnr-bicycle"></i>Let's Ride</a>
+                <a href="{% url 'trail_list' %}" class="bttn-white wow fadeInUp" data-wow-delay="0.8s">Let's Ride <i class="fas fa-bicycle"></i></a>
             </div>
         </div>
     </div>
