--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -17,13 +17,15 @@
                 <div class="page-title text-center">
                     <h5 class="title">Password Change</h5>
 				</div>
-				
-				<p>Please enter your old password, for security's sake, and then enter your new password twice so we can verify you typed it in correctly.</p>
-				<form method="POST">
-					{% csrf_token %}
-					{{ form.as_p }}
-					<input class="btn btn-primary" type="submit" value="Change my password">
-				</form>
+                
+                <div class="login-form">
+                    <p>Please enter your old password, for security's sake, and then enter your new password twice so we can verify you typed it in correctly.</p>
+                    <form method="POST">
+                        {% csrf_token %}
+                        {{ form.as_p }}
+                        <input class="btn btn-primary btn-block" type="submit" value="Change my password">
+                    </form>
+                </div>
 
             </div>
         </div>
