--- a/templates/trail_new.html
+++ b/templates/trail_new.html
@@ -17,13 +17,15 @@
                 <div class="page-title text-center">
                     <h5 class="title">Add Trail</h5>
 				</div>
-				
-				<form action="" method="post" enctype="multipart/form-data">
-					{% csrf_token %}
-					{% comment %} {{ form.as_p }} {% endcomment %}
-					{{ form|crispy }}
-					<button class="btn btn-success ml-2" type="submit">Post</button>
-				</form>
+                
+                <div class="login-form">
+                    <form action="" method="post" enctype="multipart/form-data">
+                        {% csrf_token %}
+                        {% comment %} {{ form.as_p }} {% endcomment %}
+                        {{ form|crispy }}
+                        <button class="btn btn-success btn-block" type="submit">Post</button>
+                    </form>
+                </div>
 
             </div>
         </div>
