--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1610,3 +1610,26 @@ input:-webkit-autofill:focus {
 
 /* 26. MENU DROPDOWN USER LOGGED IN */
 
+/* 27. USER LOGIN FORM */
+
+.login-form {
+    width: 690px;
+    margin: 50px auto;
+}
+.login-form form {
+    margin-bottom: 15px;
+    background: #f7f7f7;
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+    padding: 30px;
+}
+.login-form h2 {
+    margin: 0 0 15px;
+}
+.form-control, .btn {
+    min-height: 38px;
+    border-radius: 2px;
+}
+.btn {        
+    font-size: 15px;
+    font-weight: bold;
+}
