--- a/templates/base.html
+++ b/templates/base.html
@@ -33,6 +33,9 @@
     <link rel="stylesheet" href="{% static 'css/responsive.css' %}">
     <script src="{% static 'js/vendor/modernizr-2.8.3.min.js' %}"></script>
 
+    <!-- Google -->
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCY7Lilu4fOw0DubSVajzwThf7iVAEx8fU&callback=initMap"></script>
+
     <!--[if lt IE 9]>
         <script src="//oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
         <script src="//oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -99,7 +102,7 @@
                         <a class="nav-link dropdown-toggle" href="#" id="userMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="far fa-user"></i> {{ user.username }}</a>
                         
                         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userMenu">
-                            <a class="dropdown-item" href="#" style="color:#768ede;"><i class="fas fa-map-marker"></i>&nbsp; View my trails</a>
+                            <a class="dropdown-item" href="{% url 'user_trails' %}" style="color:#768ede;"><i class="fas fa-map-marker"></i>&nbsp; View my trails</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="{% url 'password_change' %}" style="color:#768ede;"><i class="fas fa-unlock"></i>&nbsp; Change password</a>
                             <div class="dropdown-divider"></div>
@@ -109,6 +112,7 @@
                     {% else %}
 
                         <a href="{% url 'signup' %}">Join Us</a>
+                        <a href="{% url 'login' %}">Login</a>
 
                     {% endif %}
 
@@ -184,7 +188,7 @@
                             <li><a href="#">Features</a></li>
                             <li><a href="#">Pricing</a></li>
                             <li><a href="#">Testimonial</a></li> {% endcomment %}
-                            <li><a href="{% url 'contact' %}">Contact</a></li>
+                            <li><a href="{% url 'email' %}">Contact</a></li>
                         </ul>
                         {% comment %} <div style="text-align: right;">
                             <a href="https://www.facebook.com/ciclotrasee" target="_blank"><i class="fab fa-facebook" style="font-size:1.7em;"></i></a>
