--- a/templates/email.html
+++ b/templates/email.html
@@ -1,10 +1,10 @@
-<!-- templates/home.html -->
+<!-- templates/email.html -->
 
 {% extends 'base.html' %}
 
 {% load crispy_forms_tags %}
 
-{% block title %}Sign Up{% endblock %}
+{% block title %}Contact Us{% endblock %}
 
 {% block content %}
 
@@ -15,24 +15,22 @@
         <div class="row">
             <div class="col-xs-12 col-md-10 col-md-offset-1">
                 <div class="page-title text-center">
-                    <h5 class="title">Sign Up</h5>
+                    <h5 class="title">Contact Us</h5>
 				</div>
 				
 				{% comment %} <h2>Sign up</h2> {% endcomment %}
 
 				<div class="login-form">
 					<form method="post">
-				
 						{% csrf_token %}
 						{{ form|crispy }}
-						<button  class="btn btn-primary btn-block" type="submit">Sign up</button>
-				
+						<div class="form-actions">
+						<button type="submit" class="btn btn-primary btn-block">Send</button>
+						</div>
 					</form>
 				</div>
 
-				<br />
-				<p style="text-align:center;">Already have an account? <a href="{% url 'login' %}">Login</a> instead.</p>
-
+				
             </div>
         </div>
     </div>
