--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -4,7 +4,7 @@
 
 {% load crispy_forms_tags %}
 
-{% block title %}Sign Up{% endblock %}
+{% block title %}Login{% endblock %}
 
 {% block content %}
 
@@ -20,17 +20,19 @@
 				
 				{% comment %} <h2>Sign up</h2> {% endcomment %}
 
-				<form method="post">
-			
-					{% csrf_token %}
-					{{ form|crispy }}
-					<button class="btn btn-primary ml-2" type="submit">Login</button>
-			
-				</form>
+				<div class="login-form">
+					<form method="post">
+				
+						{% csrf_token %}
+						{{ form|crispy }}
+						<button class="btn btn-primary btn-block" type="submit">Login</button>
+				
+					</form>
+				</div>
 			
 				<br />
 			
-				<p><a href="{% url 'signup' %}">Sign up</a> |
+				<p style="text-align:center;"><a href="{% url 'signup' %}">Sign up</a> |
 				<a href="{% url 'password_reset' %}">Reset password</a></p>
 
             </div>
