--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -16,14 +16,16 @@
             <div class="col-xs-12 col-md-10 col-md-offset-1">
                 <div class="page-title text-center">
                     <h5 class="title">Password Reset</h5>
-				</div>
-				
-				<p>Enter your email address below, and we'll email instructions for setting a new one.</p>
-				<form method="POST">
-					{% csrf_token %}
-					{{ form.as_p }}
-					<input class="btn btn-primary" type="submit" value="Send me instructions!">
-				</form>
+                </div>
+                
+				<div class="login-form">
+                    <p>Enter your email address below, and we'll email instructions for setting a new one.</p>
+                    <form method="POST">
+                        {% csrf_token %}
+                        {{ form.as_p }}
+                        <input class="btn btn-primary btn-block" type="submit" value="Send me instructions!">
+                    </form>
+                </div>
 
             </div>
         </div>
