--- a/templates/trail_list.html
+++ b/templates/trail_list.html
@@ -18,11 +18,12 @@
                     <h5 class="title">Trails</h5>
 				</div>
 
+				<br />
 				{% comment %} {% if trail %} {% endcomment %}
 					<div class="row">
 						{% for trail in object_list %}
 
-							<div class="item-container col-md-6">
+							<div class="item-container col-md-6" style="margin-bottom:30px">
 								
 								<div class="card">
 									<img class="card-img-top" src="{{ trail.image.url }}" height="300px"/>
@@ -32,11 +33,11 @@
 										<small class="text-muted"><i class="far fa-user"></i> {{ trail.author }} &nbsp;&nbsp; <i class="fas fa-calendar-alt"></i> {{ trail.date }}</small>
 									</div>
 		
-									<ul class="list-group list-group-flush">
+									{% comment %} <ul class="list-group list-group-flush">
 											<li class="list-group-item"><i class="fas fa-ruler"></i> Distance &nbsp;&nbsp; <big>20</big> km</li>
 											<li class="list-group-item"><i class="fas fa-stopwatch"></i> Duration &nbsp;&nbsp; <big>3:40</big> hours</li>
 											<li class="list-group-item"><i class="fas fa-tachometer-alt"></i> Difficulty &nbsp;&nbsp; <big>Easy</big> </li>
-									</ul>
+									</ul> {% endcomment %}
 		
 									<div class="card-body">
 										{{ trail.about|truncatewords:16 }}
@@ -51,7 +52,6 @@
 						{% if forloop.counter|divisibleby:2 %}
 							</div>
 
-							<br />
 							<div class="row">
 						{% endif %}
 						{% endfor %}
