--- a/templates/home.html
+++ b/templates/home.html
@@ -38,11 +38,52 @@
             <div class="col-xs-12 col-md-10 col-md-offset-1">
                 <div class="page-title text-center">
                     {% comment %} <img src="{% static 'images/about-logo.png' %}" alt="About Logo"> {% endcomment %}
-                    <div class="space-20"></div>
-                    <h5 class="title">Recommended Trails</h5>
-                    <div class="space-30"></div>
+                    <h5 class="title">Staff Pick</h5>
+                    <div class="space-10"></div>
                     <h3 class="blue-color">Most appreciated trails</h3>
                     <div class="space-20"></div>
+
+                    <div class="row">
+
+                    
+                        {% for trail in object_list %}
+
+                            {% if trail.homepage_staff_pick %}
+
+                                <div class="item-container col-md-3" style="margin-bottom:30px">
+                                    
+                                    <div class="card">
+                                        <img class="card-img-top" src="{{ trail.image.url }}" height="300px"/>
+            
+                                        <div class="card-header">
+                                            <span class="font-weight-bold"><a href="{% url 'trail_detail' trail.pk %}">{{ trail.title|slice:"25" }}</a></span> <br />
+                                            <small class="text-muted">by {{ trail.author }}</small>
+                                        </div>
+            
+                                        {% comment %} <ul class="list-group list-group-flush">
+                                                <li class="list-group-item"><i class="fas fa-ruler"></i> Distance &nbsp;&nbsp; <big>20</big> km</li>
+                                                <li class="list-group-item"><i class="fas fa-stopwatch"></i> Duration &nbsp;&nbsp; <big>3:40</big> hours</li>
+                                                <li class="list-group-item"><i class="fas fa-tachometer-alt"></i> Difficulty &nbsp;&nbsp; <big>Easy</big> </li>
+                                        </ul> {% endcomment %}
+            
+                                        <div class="card-body">
+                                            {{ trail.about|truncatewords:6 }}
+                                            {% comment %} {{ trail.about|slice:"200" }} {% endcomment %}
+                                        </div>
+                                    </div>
+                                </div>
+	
+                                {% if forloop.counter|divisibleby:4 %}
+                                    </div>
+
+                                    <div class="row">
+                                {% endif %}
+                                
+                            {% endif %}
+                            
+                        {% endfor %}
+                    
+                        
                     {% comment %} <p>Lorem ipsum dolor sit amet, consectetur adipiing elit, sed do eiusmod tempor incididunt ut labore et laborused sed do eiusmod tempor incididunt ut labore et laborused.</p> {% endcomment %}
                 </div>
             </div>
