--- a/templates/trail_detail.html
+++ b/templates/trail_detail.html
@@ -15,68 +15,166 @@
         <div class="row">
             <div class="col-xs-12 col-md-10 col-md-offset-1">
                 <div class="page-title text-center">
-                    <h5 class="title">{{ object.title }}</h5>
+                    <h3 class="title">{{ object.title }}</h3>
 				</div>
-				
-					<div class="trail-entry">
-						<img src="{{ object.image.url }}" height="300px"/>
-						{% comment %} {{ trail.image }} {% endcomment %}
-						<h2>{{ object.title }}</h2>
-						<p><i class="far fa-user"></i> {{ object.author }} &nbsp;&nbsp; <i class="fas fa-calendar-alt"></i> {{ object.date }}</p>
-							<ul class="list-group list-group-flush">
-								<li class="list-group-item"><i class="fas fa-map-marker-alt"></i> Region &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; {{ trail.region }}</li>
-								<li class="list-group-item"><i class="fas fa-ruler"></i> Distance &nbsp;&nbsp; {{ trail.distance }} km</li>
-								<li class="list-group-item"><i class="fas fa-tachometer-alt"></i> Difficulty &nbsp;&nbsp; {{ trail.difficulty }}</li>
-							</ul>
-							<p>{{ object.about }}</p>
-					</div>
 
+				<div class="card mb-3">
+					<img class="card-img-top" src="{{ object.image.url }}" alt="Card image cap">
+					<div class="card-body">
+					  {% comment %} <h5 class="card-title">Card title</h5> {% endcomment %}
+
+						<p class="card-text" style=""><i class="fas fa-map-marker-alt"></i> Region <strong>{{ trail.region }}</strong> &nbsp;&nbsp;&nbsp;&nbsp;
+						<i class="fas fa-ruler"></i> Distance <strong>{{ trail.distance }} km</strong>&nbsp;&nbsp;&nbsp;&nbsp;
+						<i class="fas fa-tachometer-alt"></i> Difficulty <strong>{{ trail.difficulty }}</strong></p>
+						<p class="card-text">{{ object.about }}</p>
+
+						<div id='map'></div>
+						<script>
+							mapboxgl.accessToken = 'pk.eyJ1IjoicHdhZ25lcm8iLCJhIjoiY2pnYWNrand6MTloMTMzbnByODhiNGs1MSJ9.4nwkDlCMvB7BsVXRjIlu8g';
+							var map = new mapboxgl.Map({
+								container: 'map',
+								style: 'mapbox://styles/mapbox/streets-v10',
+								center: [-122.486052, 37.830348],
+								zoom: 13
+							});
+
+							map.on('load', function () {
+
+								map.addLayer({
+									"id": "route",
+									"type": "line",
+									"source": {
+										"type": "geojson",
+										"data": {
+											"type": "Feature",
+											"properties": {},
+											"geometry": {
+												"type": "LineString",
+												"coordinates": [
+													[-122.48369693756104, 37.83381888486939],
+													[-122.48348236083984, 37.83317489144141],
+													[-122.48339653015138, 37.83270036637107],
+													[-122.48356819152832, 37.832056363179625],
+													[-122.48404026031496, 37.83114119107971],
+													[-122.48404026031496, 37.83049717427869],
+													[-122.48348236083984, 37.829920943955045],
+													[-122.48356819152832, 37.82954808664175],
+													[-122.48507022857666, 37.82944639795659],
+													[-122.48610019683838, 37.82880236636284],
+													[-122.48695850372314, 37.82931081282506],
+													[-122.48700141906738, 37.83080223556934],
+													[-122.48751640319824, 37.83168351665737],
+													[-122.48803138732912, 37.832158048267786],
+													[-122.48888969421387, 37.83297152392784],
+													[-122.48987674713133, 37.83263257682617],
+													[-122.49043464660643, 37.832937629287755],
+													[-122.49125003814696, 37.832429207817725],
+													[-122.49163627624512, 37.832564787218985],
+													[-122.49223709106445, 37.83337825839438],
+													[-122.49378204345702, 37.83368330777276]
+												]
+											}
+										}
+									},
+									"layout": {
+										"line-join": "round",
+										"line-cap": "round"
+									},
+									"paint": {
+										"line-color": "#888",
+										"line-width": 8
+									}
+								});
+							});
+						</script>
+
+						<p>
+							<a href="http://127.0.0.1:8000{{ object.track.url }}" class="btn btn-primary"><i class="fa fa-download"></i> KML</a>
+								
+							<a href="#" class="btn btn-primary"><i class="fa fa-download"></i> GPX</a>
+						</p>
+
+						{% if user.is_authenticated and user == object.author %}
+							<p><a href="{% url 'trail_edit' trail.pk %}" class="btn btn-primary"><i class="far fa-edit"></i> Edit</a> 
+								<a href="{% url 'trail_delete' trail.pk %}" class="btn btn-danger"><i class="far fa-trash-alt"></i> Delete</a></p>
+						{% endif %}
+					
+						{% comment %} <p>Back to <a href="{% url 'trail_list' %}">All Trails</a>.</p> {% endcomment %}
+					
+						<div>
+							{% for comment in trail.comments.all %}
+								<p><span class="font-weight-bold">{{ comment.author }} &middot; &nbsp;</span>{{ comment }}</p>
+							{% endfor %}
+						</div>
+						
+					  {% comment %} <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> {% endcomment %}
+					  	<p class="card-text"><small class="text-muted"><i class="far fa-user"></i> {{ object.author }} &nbsp;&nbsp; <i class="fas fa-calendar-alt"></i> {{ object.date }}</small></p>
+					</div>
+				  </div>
+				
 					
 
-					{% comment %} <a href="http://127.0.0.1:8000{{ object.track.url }}">http://127.0.0.1:8000{{ object.track.url }}</a> {% endcomment %}
+							<!-- GOOGLE MAPS VERSION -->
 
-					{% comment %} <script>
-						var map;
-						var src = 'http://127.0.0.1:8000{{ object.track.url }}';//LINK CATRE FISIERUL KML/KMZ
-						function initMap() {
-							map = new google.maps.Map(document.getElementById('map'), {
-								center: new google.maps.LatLng(45.3539926,22.8386059),//COORDONATELE DE VIZUALIZARE
-								zoom: 13.75,//ZOOMUL DORIT
-								mapTypeId: google.maps.MapTypeId.SATELLITE
-							});
-							var kmlLayer = new google.maps.KmlLayer(src, {
-								suppressInfoWindows: true,
-								map: map
-							});
-							kmlLayer.addListener('click', function(event) {
-								var content = event.featureData.infoWindowHtml;
-								var testimonial = document.getElementById('capture');
-								testimonial.innerHTML = content;
-							});
-						}
-					</script>
+							{% comment %} <div id="map"></div>
 
-					<style>
-						#map {
-							height: 300px;
-							width: 500PX;
-							overflow: hidden;
-							float: left;
-							border: thin solid #333;
-						}
-					</style> {% endcomment %}
-				
-					{% if user.is_authenticated and user == object.author %}
-						<p><a href="{% url 'trail_edit' trail.pk %}" class="btn btn-primary"><i class="far fa-edit"></i> Edit</a> &nbsp;&nbsp; <a href="{% url 'trail_delete' trail.pk %}" class="btn btn-danger"><i class="far fa-trash-alt"></i> Delete</a></p>
-					{% endif %}
-				
-					{% comment %} <p>Back to <a href="{% url 'trail_list' %}">All Trails</a>.</p> {% endcomment %}
-				
-					<div>
-						{% for comment in trail.comments.all %}
-							<p><span class="font-weight-bold">{{ comment.author }} &middot; &nbsp;</span>{{ comment }}</p>
-						{% endfor %}
-					</div>
+							<script>
+								var map;
+								var src = 'http://127.0.0.1:8000{{ object.track.url }}';//LINK CATRE FISIERUL KML/KMZ
+								function initMap() {
+									map = new google.maps.Map(document.getElementById('map'), {
+										center: new google.maps.LatLng(45.3539926,22.8386059),//COORDONATELE DE VIZUALIZARE
+										zoom: 3.75,//ZOOMUL DORIT
+										mapTypeId: google.maps.MapTypeId.SATELLITE
+									});
+									var kmlLayer = new google.maps.KmlLayer(src, {
+										suppressInfoWindows: true,
+										map: map
+									});
+									kmlLayer.addListener('click', function(event) {
+										var content = event.featureData.infoWindowHtml;
+										var testimonial = document.getElementById('capture');
+										testimonial.innerHTML = content;
+									});
+								}
+							</script> {% endcomment %}
+
+							<!-- MAPBOX VERSION -->
+
+
+							{% comment %} <div id='map' style='margin-bottom: 10px; width: 100%; height: 300px;'></div>
+							<script>
+								mapboxgl.accessToken = 'pk.eyJ1IjoicHdhZ25lcm8iLCJhIjoiY2pnYWNrand6MTloMTMzbnByODhiNGs1MSJ9.4nwkDlCMvB7BsVXRjIlu8g';
+								var map = new mapboxgl.Map({
+								container: 'map',
+								style: 'mapbox://styles/mapbox/streets-v10'
+								});
+							</script>
+
+							{% comment %} <div id="map"></div>
+
+							<script>
+								var map;
+								var src = 'http://127.0.0.1:8000{{ object.track.url }}';//LINK CATRE FISIERUL KML/KMZ
+								function initMap() {
+									map = new google.maps.Map(document.getElementById('map'), {
+										center: new google.maps.LatLng(45.68861,21.90306),//COORDONATELE DE VIZUALIZARE
+										zoom: 5.75,//ZOOMUL DORIT
+										mapTypeId: google.maps.MapTypeId.SATELLITE
+									});
+									var kmlLayer = new google.maps.KmlLayer(src, {
+										suppressInfoWindows: true,
+										map: map
+									});
+									kmlLayer.addListener('click', function(event) {
+										var content = event.featureData.infoWindowHtml;
+										var testimonial = document.getElementById('capture');
+										testimonial.innerHTML = content;
+									});
+								}
+							</script> {% endcomment %}
+					
+			
 
             </div>
         </div>
