--- a/templates/trail_edit.html
+++ b/templates/trail_edit.html
@@ -21,7 +21,7 @@
                 <div class="login-form">
                     <form action="" method="post" enctype="multipart/form-data">
                         {% csrf_token %}
-                        {{ form.as_p }}
+                        {{ form|crispy}}
                         <button class="btn btn-info btn-block" type="submit">Update</button>
                     </form>
                 </div>
