--- a/templates/trail_list.html
+++ b/templates/trail_list.html
@@ -25,12 +25,12 @@
 
 							<div class="item-container col-md-6" style="margin-bottom:30px">
 								
-								<div class="card">
+								<div class="card" style="border-radius:5px;">
 									<img class="card-img-top" src="{{ trail.image.url }}" height="300px"/>
 		
 									<div class="card-header">
 										<span class="font-weight-bold"><a href="{% url 'trail_detail' trail.pk %}">{{ trail.title }}</a></span> <br />
-										<small class="text-muted"><i class="far fa-user"></i> {{ trail.author }} &nbsp;&nbsp; <i class="fas fa-calendar-alt"></i> {{ trail.date }}</small>
+										
 									</div>
 		
 									{% comment %} <ul class="list-group list-group-flush">
@@ -39,16 +39,27 @@
 											<li class="list-group-item"><i class="fas fa-tachometer-alt"></i> Difficulty &nbsp;&nbsp; <big>Easy</big> </li>
 									</ul> {% endcomment %}
 
-									<ul class="list-group list-group-flush">
+									<!-- <ul class="list-group list-group-flush">
 										<li class="list-group-item"><i class="fas fa-map-marker-alt"></i> Region &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; {{ trail.region }}</li>
 										<li class="list-group-item"><i class="fas fa-ruler"></i> Distance &nbsp;&nbsp; {{ trail.distance }} km</li>
 										<li class="list-group-item"><i class="fas fa-tachometer-alt"></i> Difficulty &nbsp;&nbsp; {{ trail.difficulty }}</li>
-									</ul>
+									</ul> -->
 		
 									<div class="card-body">
+										<p><small>
+											<i class="fas fa-map-marker-alt"></i> <strong>{{ trail.region }}</strong> |
+											<i class="fas fa-ruler"></i> <strong>{{ trail.distance }} km</strong> |
+											<i class="fas fa-tachometer-alt"></i> <strong>{{ trail.difficulty }}</strong>
+										</small></p>
+
 										{{ trail.about|truncatewords:16 }}
 										{% comment %} {{ trail.about|slice:"200" }} {% endcomment %}
 									</div>
+
+									<div class="card-footer">
+											<small class="text-muted"><i class="far fa-user"></i> {{ trail.author }} &nbsp;&nbsp; <i class="fas fa-calendar-alt"></i> {{ trail.date|date:"j M, Y" }}</small>
+									</div>
+
 								</div>
 
 							</div>
