modified frontend of trail detail a bit

--- a/templates/home.html
+++ b/templates/home.html
@@ -98,6 +98,22 @@
                 </div>
             </div>
         </div>
+
+        <div class="row">
+                <div class="col-xs-12 col-md-10 col-md-offset-1">
+                    <div class="page-title text-center">
+                        {% comment %} <img src="{% static 'images/about-logo.png' %}" alt="About Logo"> {% endcomment %}
+                        <h5 class="title">Regions</h5>
+                        <!-- <div class="space-10"></div>
+                        <h3 class="blue-color">Most appreciated trails</h3>
+                        <div class="space-20"></div> -->
+
+                        <div class="row">
+
+                </div>
+            </div>
+        </div>
+
     </div>
 </section>
 <!-- About-Area-End -->
